--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@coreui/coreui": "^5.4.3",
     "@coreui/react": "^5.8.0",
+    "bootstrap": "^5.3.8",
+    "classnames": "^2.5.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
